--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ Flask==2.0.2
 fpdf==1.7.2
 fpdf2==2.4.5
 matplotlib==3.4.3
-pandas==1.3.4
 yagmail==0.14.260
+mysql-connector==2.1.7
+mysql-connector-python==8.0.30
+Jinja2==3.1.2
+Flask-Session==0.3.2
 gunicorn==20.1.0
